--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Put-Yourself-in-His-Place_2497
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Reade, Charles
@@ -12,6 +15,8 @@ description: Originally published in 1870, this novel focused on trade-union ter
   while following the star-crossed romance of Henry Little and Grace Carden. It is
   impossible to deny to Mr. Reade the possession of rare and admirable powers, wrote
   the New York Times in its review.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2497#Put-Yourself-in-His-Place
 gutenberg_issued: '2006-05-17'
 gutenberg_type: Text
 identifiers:
